PythonApplication/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-service
  namespace: test
spec:
  type: ClusterIP
  selector:
    app: my-app
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
