PythonApplication/argocdIngress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
   name: argocd-ingress
   namespace: argocd 
   annotations: 
      # nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
      nginx.ingress.kubernetes.io/rewrite-target: /$2
      nginx.ingress.kubernetes.io/use-regex: "true"

spec:
  ingressClassName: nginx-prod
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx
            port: 
             number: 80
      - path: /argocd(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: argocd-server
            port: 
              number: 80
      - path: /myapp(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
         service:
          name: app-service
          port:
            number: 80
